newsletter -> Hubspot collection

--- a/themes/agico-hugo/layouts/partials/head.html
+++ b/themes/agico-hugo/layouts/partials/head.html
@@ -23,4 +23,6 @@
   <link rel="shortcut icon" href="{{ `images/favicon.png` | absURL }} " type="image/x-icon">
   <link rel="icon" href="{{ `images/favicon.png` | absURL }} " type="image/x-icon">
 
+  <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/5160484.js"></script>
+
 </head>
