--- a/themes/agico-hugo/layouts/contact/list.html
+++ b/themes/agico-hugo/layouts/contact/list.html
@@ -56,6 +56,7 @@
         <h2 class="section-title">{{ i18n "form_title" }}</h2>
       </div>
       <div class="col-lg-12 text-center p-0">
+        <!--
         <form action="{{ .Site.Params.contact_form_action }}" method="post" class="row">
           <div class="col-lg-6">
             <input type="text" class="form-control mb-4" placeholder="Your email">
@@ -73,6 +74,14 @@
             <button type="submit" class="btn btn-primary">{{ i18n "submit_now"}}</button>
           </div>
         </form>
+        -->
+        <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
+        <script>
+          hbspt.forms.create({
+          portalId: "5160484",
+          formId: "cce8f6d1-09ec-4dc9-ad67-f20bcf401d1c"
+        });
+        </script>
       </div>
     </div>
   </div>
