--- a/themes/agico-hugo/layouts/partials/subscription.html
+++ b/themes/agico-hugo/layouts/partials/subscription.html
@@ -6,7 +6,7 @@
     <div class="subscription-wrapper">
       <div class="d-flex position-relative mx-5 justify-content-between align-items-center flex-column flex-md-row text-center text-md-left">
         <h3 class="text-white flex-fill">{{ i18n "subscribe_newsletter" | safeHTML }}</h3>
-        <form action="{{ .mailchimp_form_action }}" method="post"
+        <!--<form action="{{ .mailchimp_form_action }}" method="post"
           name="mc-embedded-subscribe-form" target="_blank" novalidate class="row flex-fill">
           <div class="col-lg-7 my-md-2 my-2">
             <input type="email" class="form-control text-white px-4 border-0 w-100 text-center text-md-left" placeholder="Your Email" name="email">
@@ -17,7 +17,10 @@
               <input type="text" name="{{ .mailchimp_form_name }}" tabindex="-1">
             </div>
           </div>
-        </form>
+        </form>-->
+        <div class="col-lg-5 my-md-2 my-2">
+        <a href="/contact/" class="btn btn-primary btn-lg border-0 w-100">{{ i18n "subscribe_now" | safeHTML }}</a>
+      </div>
       </div>
     </div>
   </div>
