--- a/themes/agico-hugo/layouts/partials/head.html
+++ b/themes/agico-hugo/layouts/partials/head.html
@@ -1,6 +1,7 @@
 <head>
   <meta charset="utf-8">
   <title>{{ .Title }}</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
   {{ "<!-- mobile responsive meta -->" | safeHTML }}
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
